--- a/src/SFA.Apprenticeships.Domain.Raa.Interfaces/SFA.Apprenticeships.Domain.Raa.Interfaces.csproj
+++ b/src/SFA.Apprenticeships.Domain.Raa.Interfaces/SFA.Apprenticeships.Domain.Raa.Interfaces.csproj
@@ -85,6 +85,8 @@
     </Compile>
     <Compile Include="Queries\ApprenticeshipVacancyQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reporting\IReportingRepository.cs" />
+    <Compile Include="Reporting\Models\ReportVacanciesResultItem.cs" />
     <Compile Include="Repositories\IAgencyUserRepository.cs" />
     <Compile Include="Repositories\IProviderRepository.cs" />
     <Compile Include="Repositories\IVacancyLocationRepository.cs" />
