--- a/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/SFA.Apprenticeships.Web.Raa.Common.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/SFA.Apprenticeships.Web.Raa.Common.UnitTests.csproj
@@ -153,6 +153,7 @@
     </Compile>
     <Compile Include="Builders\VacancyViewModelBuilder.cs" />
     <Compile Include="Converters\ApprenticeshipVacancyConverterTests.cs" />
+    <Compile Include="Converters\ProviderSiteEmployerLinkViewModelConverterTests.cs" />
     <Compile Include="Mappers\AddressToAddressViewModelTests.cs" />
     <Compile Include="Mappers\ApprenticeshipVacancyToVacancyDatesViewModelMapperTests.cs" />
     <Compile Include="Mappers\ApprenticeshipVacancyToVacancyViewModelMapperTests.cs" />
