--- a/src/SFA.Apprenticeships.Data.Migrate.UnitTests/packages.config
+++ b/src/SFA.Apprenticeships.Data.Migrate.UnitTests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentAssertions" version="4.4.0" targetFramework="net451" />
-  <package id="NUnit" version="3.2.1" targetFramework="net451" />
+  <package id="FluentAssertions" version="4.2.1" targetFramework="net451" />
+  <package id="Moq" version="4.2.1507.0118" targetFramework="net451" />
+  <package id="NUnit" version="2.6.4" targetFramework="net451" />
 </packages>
