--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.IntegrationTests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.IntegrationTests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.IntegrationTests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.IntegrationTests.csproj
@@ -124,6 +124,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\DatabaseConfigurationProvider.cs" />
+    <Compile Include="Reporting\ReportingRepositoryTests.cs" />
     <Compile Include="Schemas\dbo\Employer\EmployerRepositoryTests.cs" />
     <Compile Include="Schemas\dbo\ProviderSite\ProviderSiteRepositoryTests.cs" />
     <Compile Include="Schemas\dbo\Provider\ProviderRepositoryTests.cs" />
