US1473: Application History mapper and tests

--- a/src/SFA.Apprenticeships.Data.Migrate.UnitTests/SFA.Apprenticeships.Data.Migrate.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Data.Migrate.UnitTests/SFA.Apprenticeships.Data.Migrate.UnitTests.csproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <Compile Include="Faa\Builders\CandidateBuilder.cs" />
     <Compile Include="Faa\Builders\VacancyApplicationBuilder.cs" />
+    <Compile Include="Faa\Mappers\ApplicationHistoryMappersTests.cs" />
     <Compile Include="Faa\Mappers\ApplicationMappersTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
