--- a/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
+++ b/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Entities\Sql\ApplicationHistory.cs" />
     <Compile Include="IMigrationProcessor.cs" />
     <Compile Include="IVacancyApplicationsUpdater.cs" />
+    <Compile Include="Mappers\ApplicationHistoryMappers.cs" />
     <Compile Include="Mappers\IApplicationMappers.cs" />
     <Compile Include="VacancyApplicationsMigrationProcessor.cs" />
     <Compile Include="Configuration\MongoConfiguration.cs" />
