--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.IntegrationTests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.IntegrationTests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.IntegrationTests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.IntegrationTests.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Schemas\dbo\Employer\EmployerRepositoryTests.cs" />
     <Compile Include="Schemas\dbo\ProviderSite\ProviderSiteRepositoryTests.cs" />
     <Compile Include="Schemas\dbo\Provider\ProviderRepositoryTests.cs" />
+    <Compile Include="Schemas\dbo\ReferenceNumber\ReferenceNumberTests.cs" />
     <Compile Include="Schemas\dbo\VacancyParty\VacancyPartyRepositoryTests.cs" />
     <Compile Include="Schemas\Provider\ProviderUserRepositoryTests.cs" />
     <Compile Include="Schemas\Reference\ReferenceRepositoryTests.cs" />
