--- a/src/SFA.Apprenticeships.Data.Migrate.UnitTests/SFA.Apprenticeships.Data.Migrate.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Data.Migrate.UnitTests/SFA.Apprenticeships.Data.Migrate.UnitTests.csproj
@@ -123,6 +123,10 @@
       <Project>{a8bfd333-2d6b-4d91-b544-97c269212b06}</Project>
       <Name>SFA.Apprenticeships.Data.Migrate.Faa</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Sql\SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj">
+      <Project>{b633ee4e-7a58-4acf-bbd9-0b19730b22fd}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Sql</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
