--- a/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
+++ b/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
@@ -116,7 +116,6 @@
     <Compile Include="CandidateMigrationProcessor.cs" />
     <Compile Include="Entities\ApplicationWithHistoryDictionary.cs" />
     <Compile Include="Entities\ApplicationWithHistory.cs" />
-    <Compile Include="Entities\CandidatePersonDictionary.cs" />
     <Compile Include="Entities\CandidatePerson.cs" />
     <Compile Include="Entities\Mongo\Address.cs" />
     <Compile Include="Entities\Mongo\CandidateSummary.cs" />
@@ -131,6 +130,7 @@
     <Compile Include="Mappers\CandidateMappers.cs" />
     <Compile Include="Mappers\IApplicationMappers.cs" />
     <Compile Include="Mappers\ICandidateMappers.cs" />
+    <Compile Include="Repository\Sql\CandidateRepository.cs" />
     <Compile Include="Repository\Sql\PersonRepository.cs" />
     <Compile Include="Repository\Sql\PersonTable.cs" />
     <Compile Include="Repository\Sql\ApplicationHistoryTable.cs" />
@@ -148,7 +148,7 @@
     <Compile Include="MigrationProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Mongo\VacancyApplicationsRepository.cs" />
-    <Compile Include="Repository\Mongo\CandidateRepository.cs" />
+    <Compile Include="Repository\Mongo\CandidateUserRepository.cs" />
     <Compile Include="Repository\Mongo\UserRepository.cs" />
     <Compile Include="Repository\Sql\ApplicationTable.cs" />
     <Compile Include="Repository\Sql\SyncRepository.cs" />
