US1473: Mapping Gender and Ethnicity

--- a/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
+++ b/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Entities\Mongo\CandidateSummary.cs" />
     <Compile Include="Entities\Mongo\CandidateUser.cs" />
     <Compile Include="Entities\Mongo\GeoPoint.cs" />
+    <Compile Include="Entities\Mongo\MonitoringInformation.cs" />
     <Compile Include="Entities\Mongo\RegistrationDetails.cs" />
     <Compile Include="Entities\Sql\ApplicationHistory.cs" />
     <Compile Include="Entities\Sql\Candidate.cs" />
