US1473: Using source Application and History rows to populate missing data

--- a/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
+++ b/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
@@ -123,6 +123,8 @@
     <Compile Include="Entities\Mongo\MonitoringInformation.cs" />
     <Compile Include="Entities\Mongo\RegistrationDetails.cs" />
     <Compile Include="Entities\Sql\ApplicationHistory.cs" />
+    <Compile Include="Entities\Sql\ApplicationHistorySummary.cs" />
+    <Compile Include="Entities\Sql\ApplicationSummary.cs" />
     <Compile Include="Entities\Sql\Candidate.cs" />
     <Compile Include="Entities\Sql\CandidateSummary.cs" />
     <Compile Include="IMigrationProcessor.cs" />
