--- a/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
+++ b/src/SFA.Apprenticeships.Data.Migrate.Faa/SFA.Apprenticeships.Data.Migrate.Faa.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Repository\Sql\ApplicationRepository.cs" />
     <Compile Include="Repository\Sql\ApplicationHistoryRepository.cs" />
     <Compile Include="Repository\Sql\CandidateRepository.cs" />
+    <Compile Include="Repository\Sql\LocalAuthorityRepository.cs" />
     <Compile Include="Repository\Sql\PersonRepository.cs" />
     <Compile Include="Repository\Sql\PersonTable.cs" />
     <Compile Include="Repository\Sql\ApplicationHistoryTable.cs" />
