--- a/src/SFA.Apprenticeships.Domain.Raa.Interfaces/SFA.Apprenticeships.Domain.Raa.Interfaces.csproj
+++ b/src/SFA.Apprenticeships.Domain.Raa.Interfaces/SFA.Apprenticeships.Domain.Raa.Interfaces.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Reporting\IReportingRepository.cs" />
     <Compile Include="Reporting\Models\ReportUnsuccessfulCandidatesResultItem.cs" />
     <Compile Include="Reporting\Models\ReportVacanciesResultItem.cs" />
+    <Compile Include="Reporting\Models\ReportVacancyExtensionsResultItem.cs" />
     <Compile Include="Repositories\IAgencyUserRepository.cs" />
     <Compile Include="Repositories\IProviderRepository.cs" />
     <Compile Include="Repositories\IVacancyLocationRepository.cs" />
