--- a/src/SFA.Apprenticeships.Domain.Raa.Interfaces/SFA.Apprenticeships.Domain.Raa.Interfaces.csproj
+++ b/src/SFA.Apprenticeships.Domain.Raa.Interfaces/SFA.Apprenticeships.Domain.Raa.Interfaces.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Queries\ApprenticeshipVacancyQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reporting\IReportingRepository.cs" />
+    <Compile Include="Reporting\Models\ReportSuccessfulCandidatesResultItem.cs" />
     <Compile Include="Reporting\Models\ReportUnsuccessfulCandidatesResultItem.cs" />
     <Compile Include="Reporting\Models\ReportVacanciesResultItem.cs" />
     <Compile Include="Reporting\Models\ReportVacancyExtensionsResultItem.cs" />
