--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Applications/SFA.Apprenticeships.Infrastructure.Repositories.Applications.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Applications/SFA.Apprenticeships.Infrastructure.Repositories.Applications.csproj
@@ -108,6 +108,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Entities\MongoTraineeshipApplicationDetail.cs" />
+    <Compile Include="IoC\ApplicationBsonClassMaps.cs" />
     <Compile Include="Mappers\TraineeshipApplicationMappers.cs" />
     <Compile Include="TraineeshipApplicationRepository.cs" />
     <Compile Include="ApprenticeshipApplicationRepository.cs" />
