removed CDN references for JS. All JS use bundling

--- a/src/SFA.Apprenticeships.Web.Manage/Web.config
+++ b/src/SFA.Apprenticeships.Web.Manage/Web.config
@@ -14,6 +14,7 @@
     <add key="ida:Wtrealm" value="https://manage.findapprenticeship.service.gov.uk/" />
     <add key="ida:SessionTimeout" value="60" />
     <add key="CdnUrl" value="//az693499.vo.msecnd.net" />
+    <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
